[default-layout] Fix hamburger visibility bug

--- a/packages/@sanity/default-layout/src/components/styles/NavBar.css
+++ b/packages/@sanity/default-layout/src/components/styles/NavBar.css
@@ -59,8 +59,10 @@ a.branding {
   display: flex;
   align-items: stretch;
 
-  @nest .withToolSwitcher & {
-    display: none;
+  @media (--screen-medium) {
+    @nest .withToolSwitcher & {
+      display: none;
+    }
   }
 }
 
